--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pacman-pixel</title>
+        <title> Pacman : Studio Pixel </title>
         <meta charset="utf-8"/>
+
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <script src="main.js"></script>
     </head>
+
     <body>
         ................
         code pacman 
         ................
     </body>
+    
 </html>
