--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
     </head>
 
     <body>
+
         ................
         code pacman 
         ................
+
+        <canvas id="myCanvas" width="480" height="320" ></canvas>
+
+        <script>
+            // JavaScript 
+        </script>
+
+        <script>
+        var myCanvas = document.getElementById("myCanvas");
+        var ctx = myCanvas.getContext("2D");
+        var mur_0 = document.getElementById("0.png");
+        void ctx.drawImage("0.png", 100, 100, 50, 50); </script>
+
     </body>
-    zd
+    
 </html>
